src/test/resources/regression/verification/xlang/error/Array4.scala
object Array4 {

  def foo(a: Array[Int]): Int = {
    val b = a
    b(3)
  }

}
